change some styles and html structure

--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
         <!-- <img class="keyboard" src="./assets/mobile/image-keyboard.jpg" alt="image-keyboard"> -->
 </section>
 <section class="second-section">
-  <img class="keyboard-orange" src="./assets/mobile/./keyboard-orange.png" alt="image-phone-and-keyboard">
+  <div class="keyboard-orange-container">
+    <img class="keyboard-orange" src="./assets/mobile/image-phone-and-keyboard.jpg" alt="image-phone-and-keyboard">
+    <img class="keyboard-orange-tablet" src="./assets/tablet/image-phone-and-keyboard.jpg" alt="image-phone-and-keyboard">
+    <img class="keyboard-orange-desktop" src="./assets/desktop/image-phone-and-keyboard.jpg" alt="phone-and-keyboard">
+  </div>
   <img class="mobile-glass" src="./assets/mobile/image-glass-and-keyboard.jpg" alt="image-glass-and-keyboard">
+  <img class="tablet-glass" src="./assets/tablet/image-glass-and-keyboard.jpg" alt="image-glass-and-keyboard">
+  <img class="dekstop-glass" src="./assets/desktop/image-glass-and-keyboard.jpg" alt="">
   <div class="mechanical-container">
     <h2>Mechanical wireless keyboard</h2>
       <span>The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety 
