--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img src="/assets/shared/logo.svg" alt="logo">
+    <img src="./assets/shared/logo.svg" alt="logo">
     <a class="pre-order-button" href="#">Pre-order now</a>
   </header> 
   <main>  
